Fixing the CSS that was sometimes cutting off the bottom pixel of button's borders.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
-	height: 32px;
+	height: 34px;
 	line-height: 1;
 	margin-bottom: 20px!important;
 	margin-top: 20px!important;
